--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -1,10 +1,20 @@
 
 /* PC 헤더 */
 @media screen and (min-width:768px){
+  .header-wrapper{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 15;
+    background-color: #fff;
+    border-bottom: 1px solid #ddd;
+  }
   .header-top .header-inner {
     display: flex;
     align-items: center;
-    padding: 30px 0;
+    padding-top: 30px;
+    padding-bottom: 10px;
   }
   
   .header-top .top-logo {
@@ -76,7 +86,7 @@
     content: '';
     display: block;
     position: absolute;
-    top: 70px;
+    top: 60px;
     left: 0;
     width: 100%;
     height: 0px;
@@ -93,12 +103,12 @@
   
   .header-bottom ul.gnb {
     display: flex;
-    
+    height: 60px;
   }
   
   .header-bottom ul.gnb li.depth1 {
     flex : auto;
-    height: 70px;
+    height: 60px;
   }
   .header-bottom ul.gnb > li.depth1:hover>a {
     color: #27aa84;
@@ -110,7 +120,7 @@
     display: block;
     width: 100%;
     height: 100%;
-    line-height: 70px;
+    line-height: 60px;
     text-align: center;
     font-size: 20px;
     font-weight: 500;
