--- a/src/components/customer/question.css
+++ b/src/components/customer/question.css
@@ -1,85 +1,142 @@
-.question-writing-form {
-  border-collapse: collapse;
-}
-#question-writing-form {
-  width: 1300px;
-  margin: 100px auto;
-}
-#question-writing-form,
-.writing-title,
-.question-item-box {
-  border: 1px solid #eeeeee;
-}
-.question-form-item {
-  display: flex;
-}
-.question-item-box {
-  width: 50%;
-  height: 90px;
-}
-#question-name,
-#question-password,
-#question-contact,
-#question-email,
-#question-content {
-  padding: 10px;
-  width: 300px;
-  border: 1px solid #eeeeee;
-  border: none;
-  outline: none;
-}
-.writing-question-title {
-  width: 30%;
-  height: 100%;
-  font-size: 18px;
-  border-right: 1px solid #eeeeee;
-  line-height: 90px;
-  text-indent: 30px;
-}
-.question-title-box {
-  width: 195px;
-  height: 400px;
-  text-align: center;
-  border: 1px solid #eeeeee;
-}
-.question-content-box {
-  width: calc(1296px - 200px);
-}
-#question-content {
-  text-align: center;
-  float: right;
-  width: 100%;
-  height: 100%;
-}
-#question-content-title {
-  position: relative;
-  top: 50%;
-  font-size: 18px;
-}
-.question-btn-box {
-  display: flex;
-  justify-content: center;
-}
-.question-submit-btn {
-  width: 190px;
-  height: 60px;
-  padding: 0 20px;
-  border: none;
-  border-radius: 30px;
-  background-color: #03a65a;
-  color: #fff;
-  margin-bottom: 90px;
-}
-.cf::after {
-  content: "";
-  width: 0;
-  height: 0;
-  font-size: 0;
-  display: block;
-  clear: both;
+/* PC용  */
+@media screen and (min-width: 768px) {
+  /* 작성하기 페이지 CSS */
+  .question-writing-form {
+    border-collapse: collapse;
+  }
+  #question-writing-form {
+    width: 1300px;
+    margin: 100px auto;
+  }
+  #question-writing-form,
+  .writing-title,
+  .question-item-box {
+    border: 1px solid #eeeeee;
+  }
+  .question-form-item {
+    display: flex;
+  }
+  .question-item-box {
+    width: 50%;
+    height: 90px;
+  }
+  #question-name,
+  #question-password,
+  #question-contact,
+  #question-email,
+  #question-content {
+    padding: 10px;
+    width: 300px;
+    border: 1px solid #eeeeee;
+    border: none;
+    outline: none;
+  }
+  .writing-question-title {
+    width: 30%;
+    height: 100%;
+    font-size: 18px;
+    border-right: 1px solid #eeeeee;
+    line-height: 90px;
+    text-indent: 30px;
+  }
+  .question-title-box {
+    width: 195px;
+    height: 400px;
+    text-align: center;
+    border: 1px solid #eeeeee;
+  }
+  .question-content-box {
+    width: calc(1296px - 200px);
+  }
+  #question-content {
+    text-align: center;
+    float: right;
+    width: 100%;
+    height: 100%;
+  }
+  #question-content-title {
+    position: relative;
+    top: 50%;
+    font-size: 18px;
+  }
+  .question-btn-box {
+    display: flex;
+    justify-content: center;
+  }
+  .question-submit-btn {
+    width: 190px;
+    height: 60px;
+    padding: 0 20px;
+    border: none;
+    border-radius: 30px;
+    background-color: #03a65a;
+    color: #fff;
+    margin-bottom: 90px;
+  }
+  .cf::after {
+    content: "";
+    width: 0;
+    height: 0;
+    font-size: 0;
+    display: block;
+    clear: both;
+  }
+  /* NoticeList 적용 CSS */
+  .notice-search-box input {
+    width: 250px;
+    height: 50px;
+    margin-top: 20px;
+    text-indent: 60px;
+    border: 2px solid #ddd;
+    font-size: 20px;
+    border-radius: 50px;
+    float: right;
+    outline: none;
+    background: url(../../../public/images/search.png) no-repeat;
+    background-position: 20px center;
+    background-size: 20px 20px;
+    margin-bottom: 100px;
+  }
+  .notice-search-box:focus {
+    background-image: none;
+    background-position: -10px center;
+    text-indent: 0;
+  }
 }
 
-/* NoticeList 적용 사항 */
-.question-search-box input {
-  margin-bottom: 100px;
+/* 모바일용  */
+@media screen and (max-width: 767px) {
+  .notice-list-container {
+    width: 100%;
+  }
+  .notice-search-box input {
+    width: 100px;
+    height: 30px;
+    float: right;
+  }
+  .notice-list-table {
+    width: 100%;
+  }
+  .notice-list-table tbody tr {
+    font-size: 0.8em;
+  }
+  .notice-search-box input {
+    width: 150px;
+    height: 30px;
+    text-indent: 45px;
+    border: 2px solid #ddd;
+    font-size: 16px;
+    border-radius: 50px;
+    float: right;
+    outline: none;
+    background: url(../../../public/images/search.png) no-repeat;
+    background-position: 20px center;
+    background-size: 15px 15px;
+    margin-bottom: 50px;
+  }
+  .notice-search-box:focus {
+    background-image: none;
+    background-position: -10px center;
+    text-indent: 0;
+  }
 }
