--- a/src/components/program/confirm.css
+++ b/src/components/program/confirm.css
@@ -11,11 +11,11 @@
     border-radius: 30px;
 }
 
-.text p {
+.text .confirmTxt {
     padding-bottom: 20px;
 }
 
-.text button {
+.text .confirmBtn {
     padding: 5px 10px;
     background-color: #fff;
     border: none;
