[add] Job 프로그램 상세 페이지 내 기능 구현

--- a/src/components/job/jobintro.css
+++ b/src/components/job/jobintro.css
@@ -16,7 +16,7 @@
 .jobIntroBox {
   margin: auto;
   width: 900px;
-  background-color: #dddd;
+  background-color: #f4f4f4;
   padding: 20px 50px;
   border-radius: 7px;
   margin-bottom: 100px;
