[add] modify pages and add sending email function

--- a/src/components/academy/OrderPage.css
+++ b/src/components/academy/OrderPage.css
@@ -5,7 +5,22 @@
   list-style: none;
   font-family: Noto Sans KR;
 }
+.shareBtn {
+  display: flex;
+  justify-content: end;
+}
+.shareBtn button {
+  font-size: 12px;
+  width: 35px;
+  height: 35px;
+  border: none;
+  background-color: #e8e8e8;
+  border-radius: 20px;
+  font-weight: 500;
+}
+
 .orderPage-contents {
+  color: #484745;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -13,7 +28,7 @@
   justify-content: space-around;
 }
 .orderPage-left {
-  align-items: center;
+  width: 500px;
 }
 .orderPage-right {
   margin-top: 50px;
@@ -21,7 +36,18 @@
 .orderInfo.orderPage-h2,
 .orderPage-p,
 .orderPage-ul {
-  padding: 24px 0;
+  font-weight: 800;
+  display: flex;
+}
+.swiper-slide img {
+  border-radius: 12px;
+}
+.orderPage-p {
+  margin-top: 20px;
+  font-size: 25px;
+}
+.orderPage- {
+  margin: auto;
 }
 .orderPage-select {
   width: 70px;
@@ -30,41 +56,89 @@
 .orderPage-input {
   width: 300px;
   height: 150px;
+  width: 300px;
+  height: 150px;
+  margin-bottom: 30px;
+  font-size: 15px;
+  border: 0;
+  border-radius: 15px;
+  outline: none;
+  padding-left: 10px;
+  background-color: rgb(233, 233, 233);
+}
+.orderPage-h2 {
+  font-weight: 700;
+  font-size: 30px;
 }
 .orderPage-h3 {
   width: 200px;
   height: 30px;
   font-size: 35px;
-  color: #aaaaaa;
   margin-bottom: 30px;
 }
 .orderPage-span {
   width: 1000px;
   height: 30px;
   font-size: 20px;
-  color: #aaaaaa;
 }
 
-.orderPage-Box {
-  margin-top: 40px;
-  width: 400px;
-  height: 400px;
-  background: #e8e8e8;
-  border-radius: 20px;
-}
 .orderPage-ul {
   display: flex;
-}
-.orderPage-miniBox {
-  align-content: space-between;
-  margin-left: 22px;
-  width: 100px;
-  height: 100px;
-  background: #e8e8e8;
-  border-radius: 20px;
 }
 .orderPage-infoBtn {
   font-size: 15px;
   margin-top: 30px;
   margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.orderPage-infoBtn button {
+  margin: 20px 12px;
+}
+.totalInfo dd {
+  margin-top: 10px;
+  width: 270px;
+  height: 30px;
+}
+
+.totalInfo {
+  width: 300px;
+  display: flex;
+  justify-content: flex-start;
+}
+.OrderPage-select {
+  width: 200px;
+}
+.plusMinusBtn {
+  width: 25px;
+  height: 25px;
+  background-color: #e8e8e8;
+  border: none;
+  border-radius: 5px;
+  margin: 10px 10px;
+  font-size: 14px;
+  font-weight: 900;
+}
+.alertMsg {
+  font-size: 14px;
+  margin-top: 20px;
+}
+.totalInfo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* 硫붿씤 諛곕꼫 */
+.orderPage-swiper {
+  width: 50px;
+  height: 4px;
+  border-radius: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+  margin-top: 40px;
+  width: 400px;
+  height: 400px;
+  background: #e8e8e8;
+  border-radius: 20px;
 }
