--- a/src/components/common/common.css
+++ b/src/components/common/common.css
@@ -62,7 +62,7 @@ h1,h2,h3,h4,h5,h6 {
 /* 반응형 웹 - PC  */
 @media screen and (min-width:768px) {
   .wrapper{
-    padding-top: 191px;
+    /* padding-top: 171px; */
   }
   .inner-box{
     width: 1300px; 
