--- a/src/components/common/footer.css
+++ b/src/components/common/footer.css
@@ -1,81 +1,73 @@
 
 /* PC Footer */
 @media screen and (min-width:768px){
-  .footer-wrapper *{
-    /* border-top: 1px solid #eee; */
-    box-sizing: content-box;
+  .footer-wrapper{
+    background-color: rgb(247, 245, 245);
   }
-  .footer-wrapper p{
-    margin: 0;
-  }
-  .footer-wrapper .footer-inner{
-    background-color: #eee;
-    height: 250px;
-    padding: 20px 20px;
-    
-  }
-  
-  /* 푸터 top */
-  .footer-top{
-    padding-bottom: 40px;
-  }
-  .footer-top .footer-link-list{
-    margin: 0;
-    padding: 0;
+  .footer-wrapper .footer-top {
     display: flex;
+    padding: 0 60px;
+    border-top: 2px solid #f0f0f5;
+    padding-top: 10px;
+
   }
-  .footer-top .footer-link-list li{
-    padding:4px 14px 5px;
+  .footer-wrapper .footer-logo{
+    padding: 20px 70px;
   }
-  .footer-top .footer-link-list li a{
-    font-size: 14px;
-  }
-  
-  /* 푸터 middle */
-  .footer-middle {
-    display: flex;
-    padding-left: 14px;
-    font-size: 13px;
-    color:#666;
-  }
-  
-  .footer-right-box{
-    width: 53%;
-  }
-  .footer-right-box .info-top{
-    height: 80px;
-  
-  }
-  .footer-right-box .info-bottom{
-    padding-top: 25px;
-  }
-  
-  
-  .footer-left-box{
-  
-  }
-  .footer-left-box .info-top{
-    height: 80px;
-  }
-  .footer-left-box .info-bottom{
-    display: flex;
-    padding-top: 25px;
-  }
-  .footer-left-box .info-bottom .sns-box {
-    margin-right: 8px;
-  }
-  .footer-left-box .info-bottom .sns-box img{
-    padding: 0 3px;
-    cursor: pointer;
-  }
-  .footer-logo{
-    padding-left: 100px;
-  }
-  .footer-logo img{
+  .footer-wrapper .footer-logo img {
     width: 180px;
     height: 62px;
   }
-  
+  .footer-middel{
+    padding: 20px 20px;
+    color: #90929e;
+    font-size: 12px;
+    line-height: 12px;
+  }
+
+  .footer-right{
+    margin-left: 300px;
+  }
+  .footer-right .footer-sns{
+    display: flex;
+    padding-top: 10px;
+    padding-bottom: 50px;
+  }
+  .footer-right .sns-box {
+    margin-right: 8px;
+  }
+  .footer-right .sns-box img{
+    padding: 0 8px;
+    cursor: pointer;
+  }
+  .footer-right .info-top{
+    padding: 20px 20px;
+    color: #90929e;
+    font-size: 12px;
+    line-height: 12px;
+  }
+  .footer-bottom{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 60px;
+    border-top: 2px solid #f0f0f5;
+  }
+  .footer-copy{
+    padding: 4px 70px;
+    color: #90929e;
+    font-size: 12px;
+  }
+  .footer-link-list{
+    display: flex;
+    color: #494e5f;
+    padding-right: 120px;
+    font-size: 12px;
+    font-weight: 500;
+  }
+  .footer-link-list li{
+    margin-left: 10px;
+    margin-right: 10px;
+  }
   
 }
 
