--- a/src/components/academy/SendPages/SendPages.css
+++ b/src/components/academy/SendPages/SendPages.css
@@ -14,11 +14,11 @@
   padding: 20px;
   background-color: transparent;
   width: 900px;
-  height: 700px;
+  height: 900px;
   border-radius: 14px;
   border: 2px solid lightgray;
   color: gray;
-  margin: 100px 0;
+  margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -28,6 +28,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin: 100px 0;
 }
 
 .SendContents p {
@@ -35,6 +36,7 @@
   font-size: 18px;
   font-weight: 700;
   padding-top: 20px;
+  margin-bottom: 12px;
 }
 
 .SendContents .sendPageBoxTitle {
@@ -43,19 +45,28 @@
 
 .SendContents input,
 .SendContents .textBox {
-  width: 800px;
+  width: 700px;
   -webkit-box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
           box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
   border: 0;
   outline: 0;
 }
 
+.SendContents .textBox {
+  background-color: #fff;
+  margin: 30px 0;
+  height: 400px;
+}
+
 .SendContents .contact-button {
+  margin-top: 40px;
+  background-color: #ededed;
+  -webkit-box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
   margin-left: 35%;
-  margin-top: 50px;
   width: 200px;
   height: 40px;
-  border: none;
+  margin-bottom: 70px;
   border-radius: 10px;
   font-weight: 500;
   color: gray;
