--- a/src/components/academy/SendPages/SendPages.scss
+++ b/src/components/academy/SendPages/SendPages.scss
@@ -7,37 +7,46 @@
     padding: 20px;
     background-color: transparent;
     width: 900px;
-    height: 700px;
+    height: 900px;
     border-radius: 14px;
     border: 2px solid lightgray;
     color: gray;
-    margin: 100px 0;
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 100px 0;
   }
   p {
     margin: 0;
     font-size: 18px;
     font-weight: 700;
     padding-top: 20px;
+    margin-bottom: 12px;
   }
   .sendPageBoxTitle {
     font-size: 30px;
   }
   input,
   .textBox {
-    width: 800px;
+    width: 700px;
     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
     border: 0;
     outline: 0;
   }
+  .textBox {
+    background-color: #fff;
+    margin: 30px 0;
+    height: 400px;
+  }
   .contact-button {
+    margin-top: 40px;
+    background-color: #ededed;
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
     margin-left: 35%;
-    margin-top: 50px;
     width: 200px;
     height: 40px;
-    border: none;
+    margin-bottom: 70px;
     border-radius: 10px;
     font-weight: 500;
     color: gray;
