--- a/src/components/program/program.css
+++ b/src/components/program/program.css
@@ -1,7 +1,4 @@
-* {
-    color: #636363;
-}
-
+/* reset */
 table{
     padding:0;
     border:0;
@@ -11,6 +8,7 @@ table{
 th, td{
     padding:0;
 }
+
 
 .mainTitle {
     font-size: 28px;
@@ -22,6 +20,8 @@ th, td{
     font-size: 18px;
     margin-bottom: 20px;
 }
+
+
 
 .tableSection {
     margin: 100px auto;
@@ -36,11 +36,11 @@ th, td{
     font-size: 14px;
     padding: 5px 10px;
     border-radius: 10px;
-    border: none;
+    border: 1px solid #bbb;
     cursor: pointer;
-    font-size: 16px;
     position: absolute;
 }
+
 .tableSection .top .date {
     font-size: 30px;
     text-align: center;
@@ -72,41 +72,45 @@ th, td{
 
 .tableSection .top .searchBox {
     width: 250px;
-    height: 50px;
+    height: 40px;
     margin: 20px 0;
-    text-indent: 60px;
+    text-indent: 50px;
     border: none;
-    font-size: 20px;
+    font-size: 16px;
     border-radius: 50px;
     float: right;
     outline: none;
     background: url(../../../public/images/search.png) no-repeat;
-    background-position: 20px center;
-    background-size: 20px 20px;
+    background-position: 16px center;
+    background-size: 16px 16px;
     background-color: #f3f3f3;
 }
 
-table {
+.programTable {
     margin-top: 20px;
     width: 100%;
     border: 1px solid #f3f3f3;
 }
 
-thead {
+.programTable thead {
     border-bottom: 1px solid #c8c8c8;
 }
 
-table tr:nth-child(odd) {
+.programTable tr:nth-child(odd) {
     background-color: #F4F4F4;
 }
 
-table tr th, table tr td {
+.programTable tr th, table tr td {
     padding: 20px;
 }
 
-table th {
+.programTable th {
     text-align: left;
     font-weight: bold;
+}
+
+.programTable td {
+    font-weight: 400;
 }
 
 .listSection .btn li {
