[modify] Customer 메뉴 이동 기능, Faq 아코디언 내용 변경 구현 및 코드 개선

--- a/src/components/customer/customer.css
+++ b/src/components/customer/customer.css
@@ -11,18 +11,21 @@
     width: 200px;
     height: 55px;
     margin-left: 20px;
-    background-color: #dddddd;
+    background-color: #ddd;
     border-radius: 50px;
-    text-decoration: none;
-    color: #454545;
-    font-size: 20px;
+    color: #999;
+    font-size: 18px;
     text-align: center;
     line-height: 55px;
   }
-  .customer-list.on {
+  /* common.css 적용이 안돼서 추가 */
+  .customer-list a {
+    color: inherit;
+  }
+  .customer-list:hover {
     background-color: #03a65a;
     color: #fff;
-    font-weight: bold;
+    border: none;
   }
   .cf::after {
     content: "";
@@ -56,7 +59,7 @@
     text-align: center;
     line-height: 40px;
   }
-  .customer-list.on {
+  .customer-list:hover {
     background-color: #03a65a;
     color: #fff;
     font-weight: bold;
