[modify] 메인,회원가입 수정

--- a/src/components/common/footer.css
+++ b/src/components/common/footer.css
@@ -68,6 +68,49 @@
     margin-left: 10px;
     margin-right: 10px;
   }
+
+
+  /* top 버튼 */
+  .btn-screen-top.show{
+    opacity: 1;
+    transition: opacity .5s linear;
+  }
+  .btn-screen-top.hide{
+    opacity: 0;
+    transition: opacity .5s linear;
+  }
+  .btn-screen-top {
+    opacity: 0;
+    position: fixed;
+    bottom: 138px;
+    right: 0;
+    z-index: 30;
+  }
+  .btn-screen-top span {
+    position: relative;
+    display: inline-block;
+    width: 70px;
+    height: 70px;
+    padding-top: 31px;
+    border: 1px solid #ccc;
+    border-width: 1px 0 1px 1px;
+    background-color: #fff;
+    font-size: 13px;
+    color: #000;
+    line-height: 22px;
+    letter-spacing: 0;
+    text-align: center;
+  }
+  .btn-screen-top span:before {
+    content: '';
+    position: absolute;
+    top: 17px;
+    left: 50%;
+    width: 12px;
+    height: 13px;
+    margin-left: -6px;
+    background: url(/public/images/main/ico_screen_top.png) no-repeat center center;
+  }
   
 }
 
