--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -26,13 +26,14 @@
   margin-bottom: 40px;
 }
 .main-text-box .nav-link{
-  text-decoration: none;color:inherit;
+  text-decoration: none;
+  color:#6e6e73;
   cursor: pointer;
-
+  font-weight: normal;
 }
 .main-text-box .nav-link.active{
   color: #03A65A;
-  font-weight: 500;
+  font-weight: bold;
 
 }
 .main-text-box .eyebrow {
@@ -43,6 +44,7 @@
   background-color: #03A65A;
   font-size: 17px;
   color: #fff;
+  font-weight: bold;
 }
 .main-text-box .p-list {
   margin: 0;
@@ -106,17 +108,18 @@
 .main-bottom .text-box .b-title {
   display: block;
   font-size: 20px;
-  font-weight: 500;
+  font-weight: bold;
   margin-bottom: 8px;
   color: #858899;
   
 }
 .main-bottom .text-box .b-comment {
   display: block;
-  margin-bottom: 20px; 
   font-weight: 100;
   color: #ababab;
+  margin-bottom: 20px; 
 }
+
 .main-notice .main-notice-list ul{
   margin: 0;
   padding: 0;
@@ -143,6 +146,7 @@
   width: 200px;
   height: 100px;
   border-radius: 7px;
+  margin-bottom: 40px;
 }
 .hr-list .swiper-pagination-bullet {
   background-color: #03A65A;
@@ -167,7 +171,7 @@
       margin-left: auto;
   }
   .main-banner .swiper-slide-active .panel-img{
-    transition: all 1s linear;
+    transition: all 2.2s linear;
     transform: scale(1.2);
   }
   .main-frame .panel-title{
@@ -193,6 +197,7 @@
   .main-frame .panel-top-title{
     font-size: 50px;
     font-weight: bold;
+    color: #2b2d36;
   }
   .main-frame .panel2-top-title{
     font-size: 45px;
@@ -280,6 +285,7 @@
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 20px;
+    color: #424242;
   }
   .main-program-img .program-list {
     display: flex;
@@ -290,6 +296,8 @@
   .main-program-img .program-item {
     vertical-align:top;
     margin-right: 30px;
+    overflow: hidden;
+    width: 290px;
   }
   .main-program-img .program-item .item-img {
     position: relative;
@@ -316,8 +324,10 @@
     border-radius: 7px;
     transition: height 0.35s ease-in-out;
     cursor: pointer;
-    color: #fff;
     overflow: hidden;
+  }
+  .main-program-img .program-item .item-img .item-img-desc p{
+    color: #fff !important;
   }
   .main-program-img .program-item .item-img:hover .item-img-desc{
     opacity:1;
@@ -332,12 +342,17 @@
   .main-program-img .item-text{
     margin-top: 10px;
     margin-bottom: 28px;
+    width: 100%;
+    box-sizing: border-box;
+    overflow:hidden;
+    word-wrap:break-word;
   }
   .main-program-img .item-text p {
     margin-bottom: 0;
+
   }
   .main-program-img .item-title{
-    font-weight: 500;
+    font-weight: bold;
     color: #424242;
   }
   .main-program-img .item-date{
@@ -346,6 +361,25 @@
   }
   .main-program-img .item-days{
     font-weight: 100;
+  }
+  .main-program-img .item-top {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    margin-bottom: 8px;
+  }
+  .main-program-img .item-top li{
+    margin-right: 8px;
+    width: auto;
+    height: 20px;
+    text-align: center;
+    color: #6e6e73;
+    background: #f2f2f2;
+    font-size: 12px;
+    padding: 1px 0.8rem;
+    border-radius: 0.4rem;
+    font-weight: bold;
+    align-items: center;
   }
 
     /* 더보기 버튼 */
@@ -409,6 +443,7 @@
   .main-middle-banner img{
     height: 200px;
     width: 100%;
+    border-radius: 7px;
   }
   .main-middel-banner-btn{
     position: absolute;
@@ -487,7 +522,8 @@
   .main-banner .swiper-button-prev,
   .main-banner .swiper-button-next,
   .swiper-pause,
-  .ex-item .item-comment{
+  .ex-item .item-comment,
+  .main-program-img .item-top{
     display: none;
   }
 
