--- a/src/components/member/join.css
+++ b/src/components/member/join.css
@@ -120,6 +120,7 @@
 .join-step ol li.on .num {
   font-weight: 500;
   font-size: 20px;
+  color: #fff;
 }
 .join-gubun{
   padding: 60px 0;
@@ -197,13 +198,20 @@
   line-height: 16px;
   box-sizing: border-box;
 }
-.ip-btn-wrap{
+.join-form-title h2{
+  color: #2b2d36;
+  font-size: 20px;
+  padding: 10px 0;
+  font-weight: bold;
+  margin-top: 30px;
+}
+.join-form .ip-btn-wrap{
   margin-bottom: 10px;
 }
-.ip-btn-wrap input{
+.join-form .ip-btn-wrap input{
   width: calc(100% - 124px);
 }
-.ip-btn-wrap .btn-pos{
+.join-form .ip-btn-wrap .btn-pos{
   display: inline-block;
   min-width: 115px;
   height: 40px;
@@ -219,6 +227,7 @@
   transition: all 0.1s;
 }
 .ip-email-wrap{
+  margin-top: 8px;
   display: flex;
 }
 .ip-email-wrap .gap{
@@ -239,27 +248,23 @@
   border: solid 1px #d5d5d5;
   width: 170px;
 }
-.btn-wrap{
-  margin-top: 50px;
-  text-align: center;
-}
-.btn-wrap .btn-lg{
-  display: inline-block;
-  width: 180px;
-  height: 60px;
-  padding: 0 20px;
-  line-height: 58px;
-  text-align: center;
-  border-color: #03A65A;
-  background: #03A65A;
-  color: #fff;
-  border-radius: 27px;
-  border: 1px solid #03A65A;
-  vertical-align: top;
-  transition: all 0.1s;
+.ip-btn-wrap select{
+  height: 40px;
+  margin-left: 4px;
+  padding: 0 32px 0 15px;
+  color: #999;
+  font-size: 15px;
   cursor: pointer;
-  font-weight: 500;
+  border: solid 1px #d5d5d5;
+  width: 115px;
 }
+.join-btn{
+  text-align: center;
+}
+.join-btn button{
+  margin-right: 20px;
+}
+
 
 
 
@@ -272,12 +277,12 @@
   overflow: hidden;
 }
 .agree-wrap>.agree-container[aria-expanded="false"] {
-  height: 0px;
-  transition: all .4s ease-out;
+  height: 0;
+  transition: height .4s ease-out;
 }
 .agree-wrap>.agree-container[aria-expanded="true"] {
-  height: 100%;
-  transition: all 0.35s ease-in-out;
+  height: 350px;
+  transition: height .4s ease-out;
 }
 
 .agree-header{
@@ -342,8 +347,11 @@
   height: 24px;
   cursor: pointer;
 }
-.arr-icon.big{
+.arr-icon.down{
   background:url(/public/images/ico_accordion_default.png) no-repeat center center;
+}
+.arr-icon.up{
+  background:url(/public/images/member/ico_accordion_open.png) no-repeat center center;
 }
 .arr-icon.small {
   background:url(/public/images/member/ico_down_arr.png) no-repeat center center;
@@ -351,10 +359,6 @@
 .agree-item{
   border-bottom: 1px solid #b5b5b5;
   overflow: hidden;
-}
-.agree-item>.agree-container[aria-expanded="false"]{
-  height: 0px;
-  transition: height 0.5s cubic-bezier(0, 1, 0, 1);
 }
 .agree-item .agree-header{
   padding-left: 50px;
@@ -374,3 +378,21 @@
   color: #777;
 }
 
+.join-form .error-msg {
+  margin: 4px 4px;
+  padding-left: 21px;
+  font-size: 12px;
+  color: #ec1f2f;
+  line-height: 18px;
+  background: url(/public/images/main/ico_error.png) no-repeat left center;
+}
+.join-form .error-msg.green{
+  color: #03A65A;
+  background: url(/public/images/member/join-check.png) no-repeat left center;
+  background-size: 16px 16px;
+}
+
+
+.ip-email-wrap input:disabled{
+  background-color: #eeecec;
+}
