[modify] 다크모드 추가 , 메인수정, 이미지 추가

--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -1,6 +1,12 @@
 
 /* PC 헤더 */
 @media screen and (min-width:768px){
+  .header-wrapper .switch {
+    cursor: pointer;
+    width: 80px;
+    height: 54px;
+    margin: 0;
+  }
   .header-wrapper{
     background-color: #fff;
   }
