[modify] 스크롤 top 버튼 수정

--- a/src/components/common/footer.css
+++ b/src/components/common/footer.css
@@ -82,24 +82,25 @@
   .btn-screen-top {
     opacity: 0;
     position: fixed;
-    bottom: 138px;
-    right: 0;
+    bottom: 40px;
+    right: 40px;
     z-index: 30;
   }
   .btn-screen-top span {
     position: relative;
     display: inline-block;
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     padding-top: 31px;
     border: 1px solid #ccc;
     border-width: 1px 0 1px 1px;
-    background-color: #fff;
+    background-color: #5ebf92;
     font-size: 13px;
     color: #000;
     line-height: 22px;
     letter-spacing: 0;
     text-align: center;
+    border-radius: 100%;
   }
   .btn-screen-top span:before {
     content: '';
