--- a/src/components/common/footer.css
+++ b/src/components/common/footer.css
@@ -2,7 +2,7 @@
 /* PC Footer */
 @media screen and (min-width:768px){
   .footer-wrapper{
-    background-color: rgb(247, 245, 245);
+    /* background-color: rgb(247, 245, 245); */
   }
   .footer-wrapper .footer-top {
     display: flex;
@@ -72,7 +72,7 @@
 
   /* top 버튼 */
   .btn-screen-top.show{
-    opacity: 1;
+    opacity: 0.7;
     transition: opacity .5s linear;
   }
   .btn-screen-top.hide{
@@ -80,11 +80,14 @@
     transition: opacity .5s linear;
   }
   .btn-screen-top {
+    display: block;
     opacity: 0;
     position: fixed;
     bottom: 40px;
     right: 40px;
     z-index: 30;
+    width: 60px;
+    height: 60px;
   }
   .btn-screen-top span {
     position: relative;
@@ -94,9 +97,10 @@
     padding-top: 31px;
     border: 1px solid #ccc;
     border-width: 1px 0 1px 1px;
-    background-color: #5ebf92;
+    background-color: #008000;
     font-size: 13px;
-    color: #000;
+    font-weight: bold;
+    color: rgb(65, 62, 62);
     line-height: 22px;
     letter-spacing: 0;
     text-align: center;
